Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57110

Application output warning in QNetworkAccessManager.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.3
    • 5.6.2
    • Network
    • None
    • d3ab4a1ce7cd0fe6539d592138a8119dd51d818f

    Description

      When turn off/on Wifi or plug in/out ethernet sometimes we can see warning:
      'QObject::disconnect: Unexpected null parameter'.
      There is also a post on qt forum - https://forum.qt.io/topic/71117/warning-qobject-disconnect-unexpected-null-parameter-in-qnetworkaccessmanager

      I attached simple project on which I can reproduce the issue.
      Put a breakpoint on 'return' in 'myMessageOutput' function to see callstack.

      Attachments

        For Gerrit Dashboard: QTBUG-57110
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            yurik147 Yurii Olenych
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes